# GTD-on-rails

./: .ai-jail  .editorconfig  .gitignore  AGENTS.md  README.md  mise.toml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  qodana_code_quality.yml  sonar.yml
apps/api/: .gitignore  README.md  build.gradle  package.json
apps/api/src/main/resources/: application.properties  (+3 more)
apps/desktop/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/e2e/: contexts-manage.spec.ts  inbox-create-stuff.spec.ts  stuff-body-vim-cursor.spec.ts
apps/desktop/scripts/: build.mjs  check.mjs  dev.mjs  lint.mjs
apps/desktop/src/: README.md  main.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ListPane.tsx  ListWorkspace.tsx  Pane.tsx  RetryState.tsx
apps/desktop/src/config/: appMetadata.ts  env.ts
apps/desktop/src/pages/: AppShell.tsx  ContextsPage.tsx  InboxPage.tsx  StuffDetailPage.tsx
apps/desktop/src/styles/: base.css  context-icon-dialog.css  detail-and-state.css  layouts-and-panes.css  leader-menu.css  responsive.css  tree-and-cards.css
apps/desktop/test/: apiClient.test.mts  constants.test.mts  contextIconClipboard.test.mts  contextsApi.test.mts  env.test.mts  inboxApi.test.mts  inboxTypes.test.mts  listThemes.test.mts  stuffBodyVim.test.mts  syncApi.test.mts
docs/: infrastructure.md  synchronization.md
infra/: compose.yaml
(+163 files in other folders)
